@@ -1,19 +1,13 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.MediaType;
 import org.springframework.test.context.ActiveProfiles;
-import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.MvcResult;
 import uk.gov.hmcts.reform.ccd.client.model.AboutToStartOrSubmitCallbackResponse;
-import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.document.domain.Document;
 import uk.gov.hmcts.reform.fpl.model.CaseData;
@@ -30,19 +24,16 @@ import java.time.format.FormatStyle;
 import java.util.Locale;
 import java.util.Map;
 
+import static java.util.Collections.emptyMap;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static uk.gov.hmcts.reform.fpl.utils.CoreCaseDataStoreLoader.callbackRequest;
 import static uk.gov.hmcts.reform.fpl.utils.DocumentManagementStoreLoader.document;
 
 @ActiveProfiles("integration-test")
 @WebMvcTest(UploadC2DocumentsController.class)
 @OverrideAutoConfiguration(enabled = true)
-class UploadC2DocumentsControllerTest {
-    private static final String AUTH_TOKEN = "Bearer token";
-    private static final String USER_ID = "1";
+class UploadC2DocumentsControllerTest extends AbstractControllerTest {
     private static final String USER_NAME = "Emma Taylor";
 
     private static final ZonedDateTime ZONE_DATE_TIME = ZonedDateTime.now(ZoneId.of("Europe/London"));
@@ -54,30 +45,23 @@ class UploadC2DocumentsControllerTest {
     private UserDetailsService userDetailsService;
 
     @Autowired
-    private ObjectMapper mapper;
-
-    @Autowired
-    private MockMvc mockMvc;
-
-    @Autowired
     private DateFormatterService dateFormatterService;
+
+    UploadC2DocumentsControllerTest() {
+        super("upload-c2");
+    }
 
     @BeforeEach
     void before() {
-        given(userDetailsService.getUserName(AUTH_TOKEN))
+        given(userDetailsService.getUserName(userAuthToken))
             .willReturn(USER_NAME);
     }
 
     @Test
     void shouldCreateC2DocumentBundle() throws Exception {
-        Map<String,Object> data = createTemporaryC2Document();
+        Map<String, Object> data = createTemporaryC2Document();
 
-        CallbackRequest request = createCallbackRequestWithTempC2Bundle(data);
-
-        MvcResult response = performResponseCallBack(request, "about-to-submit");
-
-        AboutToStartOrSubmitCallbackResponse callbackResponse = mapper.readValue(response.getResponse()
-            .getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToSubmitEvent(createCase(data));
 
         CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
 
@@ -98,14 +82,9 @@ class UploadC2DocumentsControllerTest {
 
     @Test
     void shouldAppendAnAdditionalC2DocumentBundleWhenAC2DocumentBundleIsPresent() throws Exception {
-        CallbackRequest request = CallbackRequest.builder()
-            .caseDetails(callbackRequest().getCaseDetails())
-            .build();
+        CaseDetails caseDetails = callbackRequest().getCaseDetails();
 
-        MvcResult response = performResponseCallBack(request, "about-to-submit");
-
-        AboutToStartOrSubmitCallbackResponse callbackResponse = mapper.readValue(response.getResponse()
-            .getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postAboutToSubmitEvent(caseDetails);
 
         CaseData caseData = mapper.convertValue(callbackResponse.getData(), CaseData.class);
 
@@ -128,30 +107,19 @@ class UploadC2DocumentsControllerTest {
     }
 
     @Test
-    void midEventShouldNotReturnAnErrorWhenDocumentIsUploaded() throws Exception {
-        Map<String,Object> data = createTemporaryC2Document();
+    void midEventShouldNotReturnAnErrorWhenDocumentIsUploaded() {
+        Map<String, Object> data = createTemporaryC2Document();
 
-        CallbackRequest request = createCallbackRequestWithTempC2Bundle(data);
-
-        MvcResult response = performResponseCallBack(request, "mid-event");
-
-        AboutToStartOrSubmitCallbackResponse callbackResponse = mapper.readValue(response.getResponse()
-            .getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(createCase(data));
 
         assertThat(callbackResponse.getErrors()).doesNotContain(ERROR_MESSAGE);
     }
 
     @Test
-    void midEventShouldReturnAnErrorWhenDocumentIsNotUploaded() throws Exception {
-        Map<String, Object> data = ImmutableMap.of(
-            "temporaryC2Document", ImmutableMap.of());
+    void midEventShouldReturnAnErrorWhenDocumentIsNotUploaded() {
+        Map<String, Object> data = Map.of("temporaryC2Document", emptyMap());
 
-        CallbackRequest request = createCallbackRequestWithTempC2Bundle(data);
-
-        MvcResult response = performResponseCallBack(request, "mid-event");
-
-        AboutToStartOrSubmitCallbackResponse callbackResponse = mapper.readValue(response.getResponse()
-            .getContentAsByteArray(), AboutToStartOrSubmitCallbackResponse.class);
+        AboutToStartOrSubmitCallbackResponse callbackResponse = postMidEvent(createCase(data));
 
         assertThat(callbackResponse.getErrors()).contains(ERROR_MESSAGE);
     }
@@ -165,33 +133,20 @@ class UploadC2DocumentsControllerTest {
         assertThat(documentBundle.getDescription()).isEqualTo(description);
     }
 
-    private CallbackRequest createCallbackRequestWithTempC2Bundle(Map<String, Object> data) {
-        return CallbackRequest.builder()
-            .caseDetails(CaseDetails.builder()
-                .data(data)
-                .build())
+    private CaseDetails createCase(Map<String, Object> data) {
+        return CaseDetails.builder()
+            .data(data)
             .build();
     }
 
-    private Map<String,Object> createTemporaryC2Document() {
-        return ImmutableMap.of(
-            "temporaryC2Document", ImmutableMap.of(
-                "document", ImmutableMap.of(
+    private Map<String, Object> createTemporaryC2Document() {
+        return Map.of(
+            "temporaryC2Document", Map.of(
+                "document", Map.of(
                     "document_url", "http://localhost/documents/85d97996-22a5-40d7-882e-3a382c8ae1b4",
                     "document_binary_url",
                     "http://localhost/documents/85d97996-22a5-40d7-882e-3a382c8ae1b4/binary",
                     "document_filename", "file.pdf"),
                 "description", "Test description"));
-    }
-
-    private MvcResult performResponseCallBack(CallbackRequest request, String endpoint) throws Exception {
-        return mockMvc
-            .perform(post("/callback/upload-c2/" + endpoint)
-                .header("authorization", AUTH_TOKEN)
-                .header("user-id", USER_ID)
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(mapper.writeValueAsString(request)))
-            .andExpect(status().isOk())
-            .andReturn();
     }
 }
